Added simple CherryPy script and mock up html file + readhtml.py + table.html

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Juniper LAB-Dashboard
 ==============
 
-This program will allow us to see wich ports on the patch panals are marked as UP or DOWN
+This program will allow us to see which ports on the patch panels in the Juniper Networking Lab are marked as UP or DOWN
 --------------
 
